All changes from chapter 7

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Meadowlark Travel</title>
+    {{{_sections.head}}}
 </head>
 <body>
     <header>
@@ -9,5 +10,6 @@
     </header>
 
     {{{body}}}
+    {{{_sections.scripts}}}
 </body>
 </html>
