Add bootstrap for styles

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Meadowlark Travel</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     {{{_sections.head}}}
 </head>
 <body>
@@ -11,5 +12,7 @@
 
     {{{body}}}
     {{{_sections.scripts}}}
+
+    <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
